[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "tinyquant-rs"
version = "1.0.0"
description = "Ultra-high-performance Rust port of TinyQuant, the CPU-only vector quantization codec."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[tool.maturin]
python-source = "python"
module-name = "tinyquant_rs._core"
bindings = "pyo3"
features = ["pyo3/extension-module", "pyo3/abi3-py312", "simd"]
strip = true
