[package]
name         = "tinyquant-sys"
description  = "C ABI façade for TinyQuant (cdylib + staticlib)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tinyquant-core = { workspace = true, features = ["std"] }
tinyquant-io   = { workspace = true }

[build-dependencies]
cbindgen = { version = "0.27", default-features = false }

[dev-dependencies]
cc      = "1"
bindgen = { version = "0.70", default-features = false, features = ["runtime"] }

[features]
default = ["simd"]
simd    = ["tinyquant-core/simd", "tinyquant-io/simd"]
# Exposes `tq_test_panic` even in release builds. Off by default.
panic-probe = []

# Integration tests that exercise the panic-crossing probe require the
# `panic-probe` feature to be enabled at build time (integration tests
# compile tinyquant-sys as an external crate, so its `cfg(test)` does
# not fire). Drive them with:
#   cargo test -p tinyquant-sys --features panic-probe
# The `abi_panic_crossing` test gates itself with
# `#[cfg(feature = "panic-probe")]` and otherwise emits a skip notice.
